# embedded-agent-bridge

./: .commit-pr-complete.json  .decompose-tasks.json  .execute-complete  .github-issue-snapshot.json  .gitignore  .plan.md  AGENT_GUIDE.md  APPTRACE_BLOCKER.md  C2000-BUILD-SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBUGGING.md  DO_NOT_USE_PROBE_RS_RTT.md  E2E_HARDWARE_VALIDATION.md  ESP32_APPTRACE_RESEARCH_SUMMARY.md  FINAL_STATUS.md  OVERNIGHT_PLAN_NPU_ML.md  PHASE2_COMPLETE.md  PRD.md  PROBE_RS_DEBUG_FINDINGS.md  PROTOCOL.md  README.md  SECURITY.md  SESSION_SUMMARY.md  TESTING.md  devices.json  eab-control  eab-flash  eab-launcher  eabctl  esptool-wrapper  llms.txt  pyproject.toml  requirements-dev.txt  stress_test_results.json
.agent/: backlog.md  handoff.md  identity.md  state.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  lint.yml
.plans/: task-1.md  task-2.md  task-3.md  task-4.md  task-5.md
docs/: FEATURE_ROADMAP.md  NEXT_FEATURES.md  OBSERVABILITY_INTEGRATION_PLAN.md  REFACTORING_PLAN.md  REGRESSION_TEST_PLAN.md  ai-debugger-ideas.md  ble-guide.md  c2000-advanced-debug-plan.md  c2000-dss-transport.md  c2000-transport-research.md  eab-improvements-plan.md  gdb_script_generators.md  macos-flash-troubleshooting.md  mcp-setup.md  mcxn947-macos-setup.md  ml-bench-results.md  ml-benchmark-comparison.md  npu-benchmark-results.md  probe-rs-rtt-status.md  probe-rs-test-results.md  regression.md  rtt-signature-mismatch.md  stm32n6-flash-debug.md  stm32n6-sram-boot.md  usb-port-mapping.md
docs/debug-testing/: COMPREHENSIVE_DEBUG_TEST_PLAN.md  DEBUG_TESTING_README.md  E2E_HARDWARE_VALIDATION.md  E2E_TESTING_GUIDE.md  E2E_TEST_LOG.md  ESP32_APPTRACE_PROGRESS.md  PHASE2_COMPLETE.md  PHASE2_PLAN.md  READY_FOR_PHASE2.md  TESTING_AUTOMATION_SUMMARY.md  WORK_SESSION_STATUS.md
docs/presentation/: DEMO_GUIDE.md  REFERENCE_CARD.md  SLIDES.md  bleak_central.py  demo_dashboard.py  demo_run.py  start_plotter.py
docs/test-results/: eab-devices-final-status.md  eab-final-status.md  eab-test-data.json
eab/: __init__.py  __main__.py  apptrace_transport.py  auto_detect.py  auto_fault_analyzer.py  backtrace.py  backtrace_patterns.py  c2000_map_parser.py  capture.py  chip_recovery.py  command_file.py  control.py  daemon.py  data_stream.py  debug_monitor.py  device_control.py  device_registry.py  dwt_explain.py  dwt_profiler.py  dwt_watchpoint.py  elf_inspect.py  event_emitter.py  fault_analyzer.py  file_utils.py  gdb_bridge.py  implementations.py  interfaces.py  jlink_bridge.py  jlink_rtt.py  log_sanitize.py  mcp_server.py  mocks.py  openocd_bridge.py  pattern_matcher.py  port_lock.py  probe_rs.py  process_utils.py  pytest_plugin.py  reconnection.py  reset_reason.py  (+12 more)
eab-probe-rs/: .gitignore  Cargo.toml  README.md  TESTING.md  pyproject.toml
eab-probe-rs/src/: lib.rs
eab/analyzers/: __init__.py  c2000_telemetry.py  dlog.py  erad.py  perfetto_export.py  type_decode.py  var_stream.py
eab/anomaly/: __init__.py  anomaly_watcher.py  baseline_comparator.py  baseline_recorder.py  metric_extractor.py
eab/ble/: __init__.py  bleak_central.py  dashboard.html  live_dashboard.py
eab/chips/: __init__.py  base.py  c2000.py  esp32.py  stm32.py  zephyr.py
eab/cli/: __init__.py  anomaly_cmds.py  backtrace_cmds.py  binary_capture_cmds.py  build_cmd.py  c2000_cmds.py  daemon_cmds.py  debug_cmds.py  defmt_cmd.py  dispatch.py  fault_cmds.py  flash_cmds.py  helpers.py  mcp_cmd.py  multi_cmd.py  parser.py  probe_rs_cmds.py  profile_cmds.py  reset_cmds.py  rtt_cmds.py  serial_cmds.py  size_cmd.py  snapshot_cmd.py  stream_cmds.py  swo_cmds.py  usb_reset.py  var_cmds.py
eab/debug_probes/: __init__.py  base.py  ccs_client.py  jlink.py  openocd.py  xds110.py
eab/fault_decoders/: __init__.py  base.py  c2000.py  cortex_m.py
eab/hil/: __init__.py  ble_central.py  central_fixture.py  device_fixture.py  hil_device.py  (+1 more)
examples/: README.md  c2000-stress-test-NOTES.md  demo-preflight.sh  demo.sh  gdb_python_example.py  gdb_script_generators_demo.py
examples/mcxn947-ml-bench/: CMakeLists.txt  README.md  prj.conf
examples/mcxn947-ml-bench/src/: dwt_profiler.c  dwt_profiler.h  main.c  main.cpp  ml_bench.c  ml_bench.cpp  ml_bench.h
examples/mcxn947-ml-bench/src/models/: exoboot_gait_model.cpp  exoboot_gait_model.h  person_detect_model.cpp  person_detect_model.h  sine_model.h
research/: PROGRESS.md
results/: 1.json  1.md  2.json  2.md  3.json  3.md  4.json  4.md  issue-15-addr2line.json  issue-15-addr2line.md  issue-17-reset-reason.json  issue-17-reset-reason.md  issue-36-swo-trace.json  issue-36-swo-trace.md  issue-37-probe-rs.json  issue-37-probe-rs.md
scripts/: build-all-debug-examples.sh  build_and_test_rtt.sh  detect-devices.sh  detect_devices.py  e2e-hardware-validation.sh  full-system-test.sh  multi_device_stress_test.py  nrf5340_recover.py  rtt_live_test.py  rtt_throughput_bench.py  test-debug-examples-e2e.sh  test-trace-pipeline.sh  test_all_transports_cli.sh  test_probe_rs_all_boards.py  test_probe_rs_elf.py  verify_devices.py
serial/: interfaces.py  session_logger.py  status_manager.py
tests/: README.md  __init__.py  conftest.py  device_discovery.py  regression_test.sh  run_all_tests.py  test_anomaly_cli.py  test_anomaly_watcher.py  test_auto_fault_analyzer.py  test_backtrace.py  test_baseline_comparator.py  test_baseline_recorder.py  test_c2000.py  test_c2000_cli.py  test_c2000_dss_flash.py  test_c2000_fault_decoder.py  test_c2000_hw.py  test_c2000_telemetry.py  test_cli_daemon_cmds.py  test_cli_debug_gdb_commands.py  test_cli_dwt_cmds.py  test_cli_entry_points.py  test_cli_gdb_integration.py  test_cli_helpers.py  test_cli_profile_cmds.py  test_cli_snapshot.py  test_cli_status_cmd.py  test_cli_status_cmds.py  test_cli_threads_cmds.py  test_cortex_m_decoder.py  test_debug_monitor.py  test_debug_probes.py  test_device_registry.py  test_dlog.py  test_dss_transport.py  test_dwt_profiler.py  test_dwt_watchpoint.py  test_erad.py  test_esp32.py  test_esptool_wrapper.py  (+31 more)
(+304 files in other folders)
